--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Jason A. Charles – Portfolio</title>
 </head>
 <body>
-  <h1>Your Name</h1>
+  <h1>Jason A. Charles</h1>
   <p>Email: jasonandrewcharles@gmail.com</p>
   <h2>Assignments</h2>
   <ul>
