--- a/CISC-3610-Scene/index.html
+++ b/CISC-3610-Scene/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Canvas Scene</title>
+</head>
+<body>
+  <canvas id="myCanvas" width="800" height="600"></canvas>
+  <script src="script.js"></script>
+</body>
+</html>
