--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>Email: jasonandrewcharles@gmail.com</p>
   <h2>Assignments</h2>
   <ul>
-    <li><a href="https://jasonxcharles.github.io/CISC-3610-Scene/">Canvas Scene Assignment</a></li>
+    <li><a href="CISC-3610-Scene/">Canvas Scene Assignment</a></li>
     <li><a href="#">Assignment 2</a></li>
   </ul>
 </body>
